# humanoid_walking

./: README.md
install/: local_setup.sh  setup.sh
install/dynamixel_sdk/share/dynamixel_sdk/: package.sh
install/dynamixel_sdk_custom_interfaces/share/dynamixel_sdk_custom_interfaces/: local_setup.sh  package.sh
install/dynamixel_sdk_examples/lib/dynamixel_sdk_examples/: read_write_node
install/dynamixel_sdk_examples/share/dynamixel_sdk_examples/: local_setup.sh  package.sh
install/op3_action_editor/share/op3_action_editor/: package.dsv  package.ps1  package.sh
install/op3_action_module/share/op3_action_module/: package.sh
install/op3_action_module_msgs/share/op3_action_module_msgs/: package.dsv  package.ps1  package.sh
install/op3_balance_control/share/op3_balance_control/: local_setup.sh  package.sh
install/op3_ball_detector_msgs/share/op3_ball_detector_msgs/: package.dsv  package.ps1  package.sh
install/op3_base_module/share/op3_base_module/: package.sh
install/op3_bringup/share/op3_bringup/: package.sh
install/op3_camera_setting_tool/share/op3_camera_setting_tool/: local_setup.sh  package.sh
install/op3_camera_setting_tool_msgs/share/op3_camera_setting_tool_msgs/: package.dsv  package.ps1  package.sh
install/op3_demo/share/op3_demo/: package.sh
install/op3_description/share/op3_description/: package.sh
install/op3_direct_control_module/share/op3_direct_control_module/: package.sh
install/op3_gazebo_ros2/share/op3_gazebo_ros2/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/ROBOTIS-OP3-Demo/op3_demo/: CMakeLists.txt  package.xml
src/ROBOTIS-OP3/op3_kajita_walking_module/: CMakeLists.txt  resultados_caminhada.txt  visualizador.py
src/ROBOTIS-OP3/op3_kajita_walking_module/include/op3_kajita_walking_module/: kajita_walking_controller.h
src/ROBOTIS-OP3/op3_kajita_walking_module/launch/: kajita_walk_webots.launch.py  visualize_walk.launch.py
src/ROBOTIS-OP3/op3_kajita_walking_module/src/: kajita_walking_controller.cpp  main.cpp
(+484 files in other folders)
